# Myagentwatch

./: CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  MyAgentWatch-2.0-架构方案.md  MyAgentWatch-Agent端监控下沉架构方案.md  MyAgentWatch-架构方案.md  MyAgentWatch-答辩演讲稿.docx  README.md  RELEASE_CHECKLIST.md  SECURITY.md  _build_docx.py  _check_syntax.py  _extract_v7.py  _fix_quotes.py  _v7_extract.txt  app.py  check.py  convert_md_to_docx.py  docker-compose.yml  faq_section.py  generate_doc.py  generate_speech.py  install.bat  pyproject.toml  requirements.txt  ruff.toml  架构要求.txt
changelog/: 2026-05-15.md  2026-05-16.md  2026-05-17-final.md  2026-05-17.md  2026-05-18_claude-code_天宇.md  2026-05-18_claude-code_天宇_r2.md  2026-05-19_claude-code_天宇.md  2026-05-19_架构方案_拓扑重做.md  2026-05-20_claude-code_天宇.md  2026-05-21_claude-code_天宇.md  2026-05-23_claude-code_天宇.md  2026-05-27_claude-code_天宇.md  2026-05-28_claude-code_天宇.md  2026-06-01_claude-code_天宇.md  2026-06-03_claude-code_天宇.md  2026-06-19_codex_天宇.md  2026-06-21_codex_天宇.md  2026-06-21_gpt-deepseek_天宇.md  2026-06-22_gpt_天宇.md  2026-06-24_codex_天宇_agent-inbox.md  2026-06-24_gpt_天宇.md  2026-06-26_codex_天宇_chat-v2-inbox-v2.md  2026-06-28_codex_天宇_agent-tasks-v3.md  2026-06-28_codex_天宇_chat-v4-channel-collaboration.md  2026-06-29_codex_天宇_chat-v5-runner-loop.md  2026-06-29_codex_天宇_chat-v6-approval-github.md  2026-07-02_codex_天宇_v0.0.1-license-release.md
docs/: MyAgentWatch-Project-Introduction-v6.docx  MyAgentWatch-项目介绍-v6.docx
myagentwatch/: AGENTS_ONBOARD.md  __init__.py  agent_tasks.py  alerting.py  collector.py  config.py  db.py  (+6 more)
(+48 files in other folders)
